--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,8 @@ venv.bak/
 
 .csv
 *.csv
+src/data/*/*.json
+!src/data/*/wild_type.json
 .pt
 *.pt
 .DS_Store
@@ -173,3 +175,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.vscode/launch.json
