Restructure and removal of src folder
Removed src structure, started working with training and fine tuning

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 .vscode/launch.json
+.vscode/
+loggers/logger_fine_tune_progen2-small_LinearRegression_full_retrain_aav.txt_2024-01-16 15:42:09.689757
+*.gz
+data/meltome/full_dataset.json
