--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,4 @@ cython_debug/
 loggers/logger_fine_tune_progen2-small_LinearRegression_full_retrain_aav.txt_2024-01-16 15:42:09.689757
 *.gz
 data/meltome/full_dataset.json
+loggers/
