--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,13 @@ pandas
 matplotlib
 numpy
 scipy
-transformers
-tokenizers
+transformers==4.28.0
+tokenizers!=0.11.3,<0.14,>=0.11.1
 scikit-learn
 seaborn
 tensorflow
 tensorflow_addons
 h5py
 lxml
+urllib3==1.26.6
 pyfaidx
