Included loggers for embedding extraction

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ loggers/logger_fine_tune_progen2-small_LinearRegression_full_retrain_aav.txt_202
 data/meltome/full_dataset.json
 loggers/
 *.out
+*.err
