--- a/plmfit/models/configurations/config_mlp.json
+++ b/plmfit/models/configurations/config_mlp.json
@@ -1,8 +1,8 @@
 {
-  "network_type":"mlp",
-  "input_len": 1024,
-  "hidden_len":  400,
-  "output_len":1,
-  "activation_function": "softmax",
-  "dropout":0.25
+  "network_type": "mlp",
+  "layers": [
+    {"type": "linear", "input_len": 1024, "output_len": 1024, "activation_function": "relu"},
+    {"type": "dropout", "rate": 0.5},
+    {"type": "linear", "input_len": 1024, "output_len": 1}
+  ]
 }
