Added server logger (needs env.py)

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,9 @@ h5py
 lxml
 urllib3==1.26.6
 pyfaidx
-<<<<<<< HEAD
 antiberty
 peft
-=======
-peft
 PyYAML
->>>>>>> 1e661b8 (Added lora implementation)
+requests
+psutil
+pynvml
