--- a/plmfit/models/configurations/mlp_classification_head_config.json
+++ b/plmfit/models/configurations/mlp_classification_head_config.json
@@ -2,19 +2,19 @@
   "architecture_parameters":
   {
     "network_type": "mlp",
-    "output_dim": 1,
+    "output_dim": 3,
     "hidden_dim": 1024,
-    "task": "classification",
+    "task": "multilabel_classification",
     "hidden_activation": "relu",
     "hidden_dropout": 0.25,
     "output_activation": "sigmoid"
   },
   "training_parameters":
   {
-    "learning_rate": 0.001,
-    "epochs": 40,
-    "batch_size": 16,
-    "loss_f": "mse",
+    "learning_rate": 0.0001,
+    "epochs": 200,
+    "batch_size": 128,
+    "loss_f": "weighted_bce",
     "optimizer": "adam",
     "val_split": 0.2,
     "weight_decay": 0.01,
