--- a/plmfit/models/configurations/lora_config.json
+++ b/plmfit/models/configurations/lora_config.json
@@ -3,5 +3,6 @@
     "lora_alpha": 16,
     "target_modules": ["qkv_proj"],
     "lora_dropout": 0.1,
-    "bias": "none"
+    "bias": "none",
+    "modules_to_save": ["classifier"]
 }
