--- a/plmfit/models/configurations/lora_mlp_classification_head_config.json
+++ b/plmfit/models/configurations/lora_mlp_classification_head_config.json
@@ -1,16 +1,18 @@
 {
   "architecture_parameters":
   {
-    "network_type": "linear",
+    "network_type": "mlp",
     "output_dim": 1,
+    "hidden_dim": 1024,
     "task": "classification",
-    "dropout": 0
+    "hidden_activation": "relu",
+    "hidden_dropout": 0.25
   },
   "training_parameters":
   {
-    "learning_rate": 0.001,
-    "epochs": 40,
-    "batch_size": 16,
+    "learning_rate": 0.00005,
+    "epochs": 15,
+    "batch_size": 4,
     "loss_f": "bce_logits",
     "optimizer": "adam",
     "val_split": 0.2,
@@ -19,7 +21,8 @@
     "gradient_clipping": false,
     "scheduler": false,
     "scaler": false,
-    "gradient_accumulation": false,
-    "early_stopping": true
+    "gradient_accumulation": 16,
+    "early_stopping": 3,
+    "model_output": "logits" 
   }
 }
