Activation functions are back baby for heads

--- a/plmfit/models/configurations/linear_classification_head_config.json
+++ b/plmfit/models/configurations/linear_classification_head_config.json
@@ -4,14 +4,15 @@
     "network_type": "linear",
     "output_dim": 1,
     "task": "classification",
-    "dropout": 0
+    "dropout": 0,
+    "output_activation": "sigmoid"
   },
   "training_parameters":
   {
-    "learning_rate": 0.001,
-    "epochs": 40,
-    "batch_size": 16,
-    "loss_f": "bce_logits",
+    "learning_rate": 0.00005,
+    "epochs": 200,
+    "batch_size": 64,
+    "loss_f": "bce",
     "optimizer": "adam",
     "val_split": 0.2,
     "weight_decay": 0.01,
@@ -20,6 +21,7 @@
     "scheduler": false,
     "scaler": false,
     "gradient_accumulation": false,
-    "early_stopping": true
+    "epoch_sizing": false,
+    "early_stopping": 10
   }
 }
