--- a/plmfit/models/configurations/linear_head_config.json
+++ b/plmfit/models/configurations/linear_head_config.json
@@ -8,9 +8,9 @@
   },
   "training_parameters":
   {
-    "learning_rate": 0.001,
-    "epochs": 40,
-    "batch_size": 16,
+    "learning_rate": 0.00005,
+    "epochs": 200,
+    "batch_size": 64,
     "loss_f": "mse",
     "optimizer": "adam",
     "val_split": 0.2,
@@ -20,6 +20,7 @@
     "scheduler": false,
     "scaler": false,
     "gradient_accumulation": false,
-    "early_stopping": true
+    "epoch_sizing": false,
+    "early_stopping": 10
   }
 }
