--- a/plmfit/models/configurations/lora_linear_classification_head_config.json
+++ b/plmfit/models/configurations/lora_linear_classification_head_config.json
@@ -4,14 +4,15 @@
     "network_type": "linear",
     "output_dim": 1,
     "task": "classification",
-    "dropout": 0
+    "dropout": 0,
+    "output_activation": "sigmoid"
   },
   "training_parameters":
   {
     "learning_rate": 0.00005,
     "epochs": 15,
-    "batch_size": 4,
-    "loss_f": "bce_logits",
+    "batch_size": 16,
+    "loss_f": "bce",
     "optimizer": "adam",
     "val_split": 0.2,
     "weight_decay": 0.01,
@@ -19,8 +20,9 @@
     "gradient_clipping": false,
     "scheduler": false,
     "scaler": false,
-    "gradient_accumulation": 16,
+    "gradient_accumulation": false,
     "early_stopping": 3,
+    "epoch_sizing": 0.3,
     "model_output": "logits" 
   }
 }
