--- a/plmfit/models/configurations/lora_linear_head_config.json
+++ b/plmfit/models/configurations/lora_linear_head_config.json
@@ -8,7 +8,7 @@
   },
   "training_parameters":
   {
-    "learning_rate": 0.00005,
+    "learning_rate": 0.0001,
     "epochs": 15,
     "batch_size": 16,
     "loss_f": "mse",
@@ -19,7 +19,7 @@
     "gradient_clipping": false,
     "scheduler": false,
     "scaler": false,
-    "gradient_accumulation": false,
+    "gradient_accumulation": 8,
     "early_stopping": 3,
     "epoch_sizing": 0.3,
     "model_output": "logits"
