--- a/plmfit/models/configurations/mlp_classification_head_config.json
+++ b/plmfit/models/configurations/mlp_classification_head_config.json
@@ -3,17 +3,18 @@
   {
     "network_type": "mlp",
     "output_dim": 3,
-    "hidden_dim": 2560,
+    "hidden_dim": 320,
     "task": "multilabel_classification",
     "hidden_activation": "relu",
     "hidden_dropout": 0.20,
-    "output_activation": "sigmoid"
+    "output_activation": "sigmoid",
+    "reduction_method": "bos"
   },
   "training_parameters":
   {
     "learning_rate": 0.0001,
-    "epochs": 200,
-    "batch_size": 128,
+    "epochs": 2,
+    "batch_size": 4,
     "loss_f": "weighted_bce",
     "optimizer": "adam",
     "val_split": 0.2,
