--- a/plmfit/models/configurations/mlp_head_config.json
+++ b/plmfit/models/configurations/mlp_head_config.json
@@ -6,7 +6,8 @@
     "hidden_dim": 1024,
     "task": "regression",
     "hidden_activation": "relu",
-    "hidden_dropout": 0.25
+    "hidden_dropout": 0.25,
+    "reduction_method": "bos"
   },
   "training_parameters":
   {
