--- a/plmfit/models/configurations/lora_mlp_classification_head_config.json
+++ b/plmfit/models/configurations/lora_mlp_classification_head_config.json
@@ -11,9 +11,9 @@
   },
   "training_parameters":
   {
-    "learning_rate": 0.0001,
-    "epochs": 15,
-    "batch_size": 16,
+    "learning_rate": 2.5e-05,
+    "epochs": 5,
+    "batch_size": 4,
     "loss_f": "bce",
     "optimizer": "adam",
     "val_split": 0.2,
@@ -22,9 +22,9 @@
     "gradient_clipping": false,
     "scheduler": false,
     "scaler": false,
-    "gradient_accumulation": 8,
+    "gradient_accumulation": 32,
     "early_stopping": 3,
     "epoch_sizing": 0.3,
-    "model_output": "logits" 
+    "model_output": "logits"
   }
 }
