--- a/plmfit/models/configurations/lora_mlp_head_config.json
+++ b/plmfit/models/configurations/lora_mlp_head_config.json
@@ -1,6 +1,5 @@
 {
-  "architecture_parameters":
-  {
+  "architecture_parameters": {
     "network_type": "mlp",
     "output_dim": 1,
     "hidden_dim": 1024,
@@ -8,22 +7,21 @@
     "hidden_activation": "relu",
     "hidden_dropout": 0.25
   },
-  "training_parameters":
-  {
+  "training_parameters": {
     "learning_rate": 0.0001,
-    "epochs": 15,
-    "batch_size": 16,
+    "epochs": 3,
+    "batch_size": 4,
     "loss_f": "mse",
     "optimizer": "adam",
     "val_split": 0.2,
     "weight_decay": 0.01,
     "warmup_steps": 0,
-    "gradient_clipping": false,
+    "gradient_clipping": 0.5,
     "scheduler": false,
     "scaler": false,
-    "gradient_accumulation": 8,
+    "gradient_accumulation": 2,
     "early_stopping": 3,
-    "epoch_sizing": 0.3,
-    "model_output": "logits" 
+    "epoch_sizing": 1.0,
+    "model_output": "logits"
   }
 }
