--- a/plmfit/models/configurations/lora_mlp_classification_head_config.json
+++ b/plmfit/models/configurations/lora_mlp_classification_head_config.json
@@ -11,20 +11,20 @@
   },
   "training_parameters":
   {
-    "learning_rate": 2.5e-05,
-    "epochs": 5,
+    "learning_rate": 0.0001,
+    "epochs": 3,
     "batch_size": 4,
     "loss_f": "bce",
     "optimizer": "adam",
     "val_split": 0.2,
     "weight_decay": 0.01,
     "warmup_steps": 0,
-    "gradient_clipping": false,
+    "gradient_clipping": 0.5,
     "scheduler": false,
     "scaler": false,
-    "gradient_accumulation": 32,
+    "gradient_accumulation": 1,
     "early_stopping": 3,
-    "epoch_sizing": 0.3,
+    "epoch_sizing": 1.0,
     "model_output": "logits"
   }
 }
