--- a/plmfit/models/configurations/lora_linear_classification_head_config.json
+++ b/plmfit/models/configurations/lora_linear_classification_head_config.json
@@ -10,14 +10,14 @@
   "training_parameters":
   {
     "learning_rate": 0.0001,
-    "epochs": 3,
+    "epochs": 2,
     "batch_size": 4,
     "loss_f": "bce",
     "optimizer": "adam",
     "val_split": 0.2,
     "weight_decay": 0.01,
     "warmup_steps": 0,
-    "gradient_clipping": 1.0,
+    "gradient_clipping": false,
     "scheduler": false,
     "scaler": false,
     "gradient_accumulation": 2,
