--- a/plmfit/models/configurations/bottleneck_linear_head_config.json
+++ b/plmfit/models/configurations/bottleneck_linear_head_config.json
@@ -3,19 +3,17 @@
   {
     "network_type": "linear",
     "output_dim": 1,
-    "task": "classification",
-    "dropout": 0,
-    "output_activation": "sigmoid"
+    "task": "regression",
+    "dropout": 0
   },
-  "training_parameters":
-  {
+  "training_parameters": {
     "learning_rate": 0.0001,
-    "epochs": 10,
-    "batch_size": 16,
-    "loss_f": "bce",
+    "epochs": 3,
+    "batch_size": 4,
+    "loss_f": "mse",
     "optimizer": "adam",
     "val_split": 0.2,
-    "weight_decay": 0.01,
+    "weight_decay": 0.0001,
     "warmup_steps": 0,
     "gradient_clipping": false,
     "scheduler": false,
