--- a/plmfit/models/configurations/bottleneck_mlp_classification_head_config.json
+++ b/plmfit/models/configurations/bottleneck_mlp_classification_head_config.json
@@ -1,21 +1,23 @@
 {
   "architecture_parameters":
   {
-    "network_type": "linear",
+    "network_type": "mlp",
     "output_dim": 1,
+    "hidden_dim": 1024,
     "task": "classification",
-    "dropout": 0,
+    "hidden_activation": "relu",
+    "hidden_dropout": 0.25,
     "output_activation": "sigmoid"
   },
   "training_parameters":
   {
     "learning_rate": 0.0001,
-    "epochs": 10,
-    "batch_size": 16,
+    "epochs": 3,
+    "batch_size": 4,
     "loss_f": "bce",
     "optimizer": "adam",
     "val_split": 0.2,
-    "weight_decay": 0.01,
+    "weight_decay": 0.0001,
     "warmup_steps": 0,
     "gradient_clipping": false,
     "scheduler": false,
