--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,7 @@ celerybeat.pid
 .venv
 env/
 venv/
+myenv/
 ENV/
 env.bak/
 venv.bak/
@@ -187,4 +188,5 @@ loggers/
 *.err
 sandbox.py
 plmfit/data/*/models/*
+plmfit/data/rbd/results/
 test/
