--- a/plmfit/models/configurations/bottleneck_config.json
+++ b/plmfit/models/configurations/bottleneck_config.json
@@ -3,5 +3,5 @@
     "non_linearity": "relu",
     "adapter_dropout": 0.1,
     "scaling": "learned",
-    "modules_to_save": ["classifier"]
+    "modules_to_save": ["classifier", "mlm"]
 }
