--- a/plmfit/models/configurations/bottleneck_last_linear_classification_head_config.json
+++ b/plmfit/models/configurations/bottleneck_last_linear_classification_head_config.json
@@ -1,18 +1,16 @@
 {
   "architecture_parameters":
   {
-    "network_type": "mlp",
+    "network_type": "linear",
     "output_dim": 1,
-    "hidden_dim": 1024,
     "task": "classification",
-    "hidden_activation": "relu",
-    "hidden_dropout": 0.25,
+    "dropout": 0,
     "output_activation": "sigmoid"
   },
   "training_parameters":
   {
     "learning_rate": 0.0001,
-    "epochs": 10,
+    "epochs": 12,
     "batch_size": 4,
     "loss_f": "bce",
     "optimizer": "adam",
@@ -23,7 +21,7 @@
     "scheduler": false,
     "scaler": false,
     "gradient_accumulation": 1,
-    "early_stopping": 2,
+    "early_stopping": 5,
     "epoch_sizing": 1.0,
     "model_output": "logits"
   }
