--- a/plmfit/models/configurations/bottleneck_last_linear_head_config.json
+++ b/plmfit/models/configurations/bottleneck_last_linear_head_config.json
@@ -1,15 +1,14 @@
 {
-  "architecture_parameters": {
-    "network_type": "mlp",
+  "architecture_parameters":
+  {
+    "network_type": "linear",
     "output_dim": 1,
-    "hidden_dim": 1024,
     "task": "regression",
-    "hidden_activation": "relu",
-    "hidden_dropout": 0.25
+    "dropout": 0
   },
   "training_parameters": {
     "learning_rate": 0.0001,
-    "epochs": 5,
+    "epochs": 30,
     "batch_size": 4,
     "loss_f": "mse",
     "optimizer": "adam",
@@ -20,7 +19,7 @@
     "scheduler": false,
     "scaler": false,
     "gradient_accumulation": 1,
-    "early_stopping": 2,
+    "early_stopping": 5,
     "epoch_sizing": 1.0,
     "model_output": "logits"
   }
