--- a/plmfit/models/configurations/lora_last_linear_classification_head_config.json
+++ b/plmfit/models/configurations/lora_last_linear_classification_head_config.json
@@ -1,17 +1,18 @@
 {
-  "architecture_parameters": {
-    "network_type": "mlp",
+  "architecture_parameters":
+  {
+    "network_type": "linear",
     "output_dim": 1,
-    "hidden_dim": 1024,
-    "task": "regression",
-    "hidden_activation": "relu",
-    "hidden_dropout": 0.25
+    "task": "classification",
+    "dropout": 0,
+    "output_activation": "sigmoid"
   },
-  "training_parameters": {
+  "training_parameters": 
+  {
     "learning_rate": 0.0001,
-    "epochs": 10,
+    "epochs": 12,
     "batch_size": 4,
-    "loss_f": "mse",
+    "loss_f": "bce",
     "optimizer": "adam",
     "val_split": 0.2,
     "weight_decay": 0.01,
@@ -20,7 +21,7 @@
     "scheduler": false,
     "scaler": false,
     "gradient_accumulation": 1,
-    "early_stopping": 2,
+    "early_stopping": 5,
     "epoch_sizing": 1.0,
     "model_output": "logits"
   }
