--- a/plmfit/models/configurations/aav_lora_last_linear_head_config.json
+++ b/plmfit/models/configurations/aav_lora_last_linear_head_config.json
@@ -6,11 +6,10 @@
     "task": "regression",
     "dropout": 0
   },
-  "training_parameters":
-  {
-    "learning_rate": 0.00005,
-    "epochs": 200,
-    "batch_size": 82,
+  "training_parameters": {
+    "learning_rate": 0.0001,
+    "epochs": 30,
+    "batch_size": 4,
     "loss_f": "mse",
     "optimizer": "adam",
     "val_split": 0.2,
@@ -19,8 +18,9 @@
     "gradient_clipping": false,
     "scheduler": false,
     "scaler": false,
-    "gradient_accumulation": false,
-    "epoch_sizing": false,
-    "early_stopping": 30
+    "gradient_accumulation": 1,
+    "early_stopping": 30,
+    "epoch_sizing": 1.0,
+    "model_output": "logits"
   }
 }
