--- a/config/training/linear_multiclass_classification_head_config.json
+++ b/config/training/linear_multiclass_classification_head_config.json
@@ -2,7 +2,7 @@
   "architecture_parameters":
   {
     "network_type": "linear",
-    "output_dim": 7,
+    "output_dim": 8,
     "task": "classification",
     "dropout": 0,
     "output_activation": "softmax"
@@ -23,6 +23,8 @@
     "gradient_accumulation": false,
     "epoch_sizing": false,
     "early_stopping": 30,
-    "no_classes": 7
+    "weights": "weights",
+    "sampler": true,
+    "no_classes": 8
   }
 }
