One hot RNN works

--- a/config/training/rnn_multiclass_token_classification_head_config.json
+++ b/config/training/rnn_multiclass_token_classification_head_config.json
@@ -1,7 +1,8 @@
 {
   "architecture_parameters":
   {
-    "network_type": "linear",
+    "network_type": "rnn",
+    "hidden_dim": 128,
     "output_dim": 3,
     "task": "token_classification",
     "dropout": 0,
