--- a/config/training/mlp_multiclass_token_classification_head_config.json
+++ b/config/training/mlp_multiclass_token_classification_head_config.json
@@ -1,17 +1,15 @@
 {
-  "architecture_parameters":
-  {
+  "architecture_parameters": {
     "network_type": "mlp",
     "output_dim": 3,
     "hidden_dim": 1024,
     "hidden_activation": "relu",
     "hidden_dropout": 0.25,
-    "task": "classification",
+    "task": "token_classification",
     "dropout": 0,
     "output_activation": "softmax"
   },
-  "training_parameters":
-  {
+  "training_parameters": {
     "learning_rate": 0.00005,
     "epochs": 200,
     "batch_size": 64,
@@ -26,8 +24,6 @@
     "gradient_accumulation": false,
     "epoch_sizing": false,
     "early_stopping": 30,
-    "weights": "weights",
-    "sampler": true,
     "no_classes": 3
   }
 }
