Fix for previous commit bug

--- a/config/training/mlp_multilabel_classification_head_config.json
+++ b/config/training/mlp_multilabel_classification_head_config.json
@@ -26,7 +26,7 @@
     "early_stopping": 10,
     "weights": "sampled_weights",
     "sampler": true,
-    "no_samples_per_epoch": "sampled_samples_per_epoch",
+    "num_samples_per_epoch": "sampled_samples_per_epoch",
     "no_classes": 1,
     "no_labels": 7
   }
