--- a/config/training/mlp_multilabel_classification_head_config.json
+++ b/config/training/mlp_multilabel_classification_head_config.json
@@ -24,6 +24,8 @@
     "gradient_accumulation": false,
     "epoch_sizing": false,
     "early_stopping": 10,
+    "weights": "sampled_weights",
+    "sampler": "label_weighted",
     "no_classes": 1,
     "no_labels": 8
   }
