--- a/config/training/mlp_multilabel_classification_head_config.json
+++ b/config/training/mlp_multilabel_classification_head_config.json
@@ -4,6 +4,7 @@
     "network_type": "mlp",
     "output_dim": 8,
     "hidden_dim": 128,
+    "hidden_layers": 3,
     "task": "multilabel_classification",
     "hidden_activation": "relu",
     "hidden_dropout": 0.25
