--- a/config/training/mlp_classification_head_config.json
+++ b/config/training/mlp_classification_head_config.json
@@ -1,22 +1,20 @@
 {
-  "architecture_parameters":
-  {
+  "architecture_parameters": {
     "network_type": "mlp",
     "output_dim": 1,
-    "hidden_dim": 1556,
+    "hidden_dim": 1814,
     "task": "classification",
     "hidden_activation": "relu",
-    "hidden_dropout": 0.23693549117226387
+    "hidden_dropout": 0.057467148839575335
   },
-  "training_parameters":
-  {
-    "learning_rate": 0.0004722248137843737,
+  "training_parameters": {
+    "learning_rate": 9.655753664252197e-05,
     "epochs": 200,
-    "batch_size": 92,
+    "batch_size": 18,
     "loss_f": "bce_logits",
     "optimizer": "adam",
     "val_split": 0.2,
-    "weight_decay": 2.125324400687282e-05,
+    "weight_decay": 3.0170312851504906e-06,
     "warmup_steps": 0,
     "gradient_clipping": false,
     "scheduler": false,
