--- a/config/training/mlp_multilabel_classification_head_config_weighted.json
+++ b/config/training/mlp_multilabel_classification_head_config_weighted.json
@@ -25,6 +25,8 @@
     "gradient_accumulation": false,
     "epoch_sizing": 1000000,
     "early_stopping": 10,
+    "weights": "random_weights_per_label",
+    "sampler": "label_weighted",
     "no_classes": 1,
     "no_labels": 8
   }
