--- a/config/training/transformer_classification_config.json
+++ b/config/training/transformer_classification_config.json
@@ -2,23 +2,23 @@
     "architecture_parameters": {
         "network_type": "transformer",
         "output_dim": 1,
-        "embd_dim": 64,
+        "embd_dim": 32,
         "task": "classification",
-        "nheads": 32,
-        "d_hid": 256,
+        "nheads": 4,
+        "d_hid": 128,
         "nlayers": 2,
         "max_seq_len": 232,
-        "pwff_dim": 128,
-        "dropout": 0.1
+        "pwff_dim": 64,
+        "dropout": 0.1420540479285826
     },
     "training_parameters": {
-        "learning_rate": 0.0004722248137843737,
+        "learning_rate": 8.985863677552064e-05,
         "epochs": 200,
-        "batch_size": 92,
+        "batch_size": 19,
         "loss_f": "bce_logits",
         "optimizer": "adam",
         "val_split": 0.2,
-        "weight_decay": 2.125324400687282e-05,
+        "weight_decay": 0.0018442045946123063,
         "warmup_steps": 0,
         "gradient_clipping": false,
         "scheduler": false,
