Configs and qol fixes on slurm scripts

--- a/config/training/hyperparams/hyperparam_config.json
+++ b/config/training/hyperparams/hyperparam_config.json
@@ -40,6 +40,13 @@
                     2048
                 ]
             },
+            "hidden_layers": {
+                "type": "int",
+                "range": [
+                    1,
+                    4
+                ]
+            },
             "hidden_dropout": {
                 "type": "float",
                 "range": [
