--- a/config/training/mlp_multilabel_classification_head_config_pos_weighted.json
+++ b/config/training/mlp_multilabel_classification_head_config_pos_weighted.json
@@ -24,6 +24,16 @@
     "epoch_sizing": 1.0,
     "early_stopping": 10,
     "no_classes": 1,
-    "no_labels": 8
+    "no_labels": 8,
+    "pos_weight": [
+      1.4505739108151492,
+      1.9746958000348587,
+      11.600767313746065,
+      10.062221750711371,
+      7.053454045211184,
+      8.544258085225906,
+      7.752262678716395,
+      11.18754810151923
+    ]
   }
 }
