--- a/config/training/mlp_multilabel_classification_head_config_focal.json
+++ b/config/training/mlp_multilabel_classification_head_config_focal.json
@@ -12,7 +12,7 @@
     "learning_rate": 6.945946876809846e-05,
     "epochs": 200,
     "batch_size": 302,
-    "loss_f": "masked_bce_logits",
+    "loss_f": "masked_focal_logits",
     "optimizer": "adam",
     "val_split": 0.2,
     "weight_decay": 6.523661693987702e-06,
