--- a/config/training/mlp_classification_head_config.json
+++ b/config/training/mlp_classification_head_config.json
@@ -3,6 +3,7 @@
     "network_type": "mlp",
     "output_dim": 1,
     "hidden_dim": 1814,
+    "hidden_layers": 2,
     "task": "classification",
     "hidden_activation": "relu",
     "hidden_dropout": 0.057467148839575335
@@ -22,7 +23,7 @@
     "gradient_accumulation": false,
     "epoch_sizing": false,
     "early_stopping": 10,
-    "weights": "weights",
+    "weights": "random_weights",
     "sampler": true,
     "no_classes": 1
   }
