transformer can use learned embeddings and changed configs

--- a/config/training/transformer_classification_config.json
+++ b/config/training/transformer_classification_config.json
@@ -26,7 +26,7 @@
         "gradient_accumulation": false,
         "epoch_sizing": false,
         "early_stopping": 10,
-        "weights": "weights",
+        "weights": "random_weights",
         "sampler": true,
         "no_classes": 1
     }
