--- a/config/training/hyperparams/hyperparam_config.json
+++ b/config/training/hyperparams/hyperparam_config.json
@@ -1,60 +1,9 @@
 {
     "linear": {
         "n_trials": 100,
-        "epochs_fragment": 0.2,
-        "epoch_sizing": 0.01,
-        "architecture_parameters": {},
-        "training_parameters": {
-            "learning_rate": {
-                "type": "float",
-                "range": [
-                    1e-7,
-                    1e-4
-                ]
-            },
-            "batch_size": {
-                "type": "int",
-                "range": [
-                    16,
-                    512
-                ]
-            },
-            "weight_decay": {
-                "type": "float",
-                "range": [
-                    1e-6,
-                    1e-2
-                ]
-            }
-        }
-    },
-    "mlp": {
-        "n_trials": 400,
         "epochs_fragment": 0.25,
-        "epoch_sizing": 0.01,
-        "architecture_parameters": {
-            "hidden_dim": {
-                "type": "int",
-                "range": [
-                    64,
-                    2048
-                ]
-            },
-            "hidden_layers": {
-                "type": "int",
-                "range": [
-                    1,
-                    5
-                ]
-            },
-            "hidden_dropout": {
-                "type": "float",
-                "range": [
-                    0.1,
-                    1.0
-                ]
-            }
-        },
+        "epoch_sizing": 0.1,
+        "architecture_parameters": {},
         "training_parameters": {
             "learning_rate": {
                 "type": "float",
@@ -79,23 +28,30 @@
             }
         }
     },
-    "rnn": {
-        "n_trials": 200,
-        "epochs_fragment": 0.1,
+    "mlp": {
+        "n_trials": 400,
+        "epochs_fragment": 0.25,
         "epoch_sizing": 0.1,
         "architecture_parameters": {
             "hidden_dim": {
                 "type": "int",
                 "range": [
-                    16,
-                    512
+                    64,
+                    4096
                 ]
             },
-            "dropout": {
+            "hidden_layers": {
+                "type": "int",
+                "range": [
+                    1,
+                    5
+                ]
+            },
+            "hidden_dropout": {
                 "type": "float",
                 "range": [
-                    0.0,
-                    1.0
+                    0.1,
+                    0.9
                 ]
             }
         },
@@ -104,29 +60,80 @@
                 "type": "float",
                 "range": [
                     1e-7,
-                    1e-4
+                    1e-3
                 ]
             },
             "batch_size": {
                 "type": "int",
                 "range": [
-                    8,
-                    128
+                    16,
+                    512
                 ]
             },
             "weight_decay": {
                 "type": "float",
                 "range": [
-                    1e-6,
-                    1e-2
+                    1e-7,
+                    1e-5
+                ]
+            }
+        }
+    },
+    "rnn": {
+        "n_trials": 400,
+        "epochs_fragment": 0.25,
+        "epoch_sizing": 0.1,
+        "architecture_parameters": {
+            "hidden_dim": {
+                "type": "int",
+                "range": [
+                    16,
+                    1024
+                ]
+            },
+            "num_layers": {
+                "type": "int",
+                "range": [
+                    2,
+                    5
+                ]
+            },
+            "dropout": {
+                "type": "float",
+                "range": [
+                    0.1,
+                    0.9
+                ]
+            }
+        },
+        "training_parameters": {
+            "learning_rate": {
+                "type": "float",
+                "range": [
+                    1e-7,
+                    1e-3
+                ]
+            },
+            "batch_size": {
+                "type": "int",
+                "range": [
+                    16,
+                    512
+                ]
+            },
+            "weight_decay": {
+                "type": "float",
+                "range": [
+                    1e-7,
+                    1e-5
                 ]
             }
         }
     },
     "transformer": {
-        "n_trials": 200,
-        "epochs_fragment": 0.2,
-        "epoch_sizing": 0.01,
+        "n_trials": 400,
+        "epochs_fragment": 0.25,
+        "epoch_sizing": 0.1,
         "architecture_parameters": {
             "embd_dim": {
                 "type": "categorical",
@@ -184,8 +191,8 @@
             "weight_decay": {
                 "type": "float",
                 "range": [
-                    1e-6,
-                    1e-2
+                    1e-7,
+                    1e-5
                 ]
             }
         }
