--- a/config/training/linear_classification_head_config.json
+++ b/config/training/linear_classification_head_config.json
@@ -23,7 +23,7 @@
     "gradient_accumulation": false,
     "epoch_sizing": false,
     "early_stopping": 10,
-    "weights": "weights",
+    "weights": "random_weights",
     "sampler": true,
     "no_classes": 1
   }
