--- a/config/training/transformer_multilabel_classification_config.json
+++ b/config/training/transformer_multilabel_classification_config.json
@@ -24,7 +24,7 @@
         "scheduler": false,
         "scaler": false,
         "gradient_accumulation": false,
-        "epoch_sizing": 1000000,
+        "epoch_sizing": 1.0,
         "early_stopping": 10,
         "no_classes": 1,
         "no_labels": 8
