--- a/config/training/linear_classification_head_config.json
+++ b/config/training/linear_classification_head_config.json
@@ -4,8 +4,7 @@
     "network_type": "linear",
     "output_dim": 1,
     "task": "classification",
-    "dropout": 0,
-    "output_activation": "sigmoid"
+    "dropout": 0
   },
   "training_parameters":
   {
