--- a/config/training/rnn_multilabel_classification_head_config_weighted.json
+++ b/config/training/rnn_multilabel_classification_head_config_weighted.json
@@ -1,9 +1,13 @@
 {
   "architecture_parameters":
   {
-    "network_type": "linear",
+    "network_type": "rnn",
+    "hidden_dim": 128,
     "output_dim": 8,
-    "task": "multilabel_classification"
+    "task": "multilabel_classification",
+    "dropout": 0,
+    "bidirectional": true,
+    "num_layers": 2
   },
   "training_parameters":
   {
@@ -21,6 +25,8 @@
     "gradient_accumulation": false,
     "epoch_sizing": 1.0,
     "early_stopping": 10,
+    "weights": "random_weights_per_label",
+    "sampler": "label_weighted",
     "no_classes": 1,
     "no_labels": 8
   }
