--- a/config/training/transformer_multilabel_classification_config_pos_weighted.json
+++ b/config/training/transformer_multilabel_classification_config_pos_weighted.json
@@ -26,9 +26,17 @@
         "gradient_accumulation": false,
         "epoch_sizing": 1.0,
         "early_stopping": 10,
-        "weights": "random_weights_per_label",
-        "sampler": "label_weighted",
         "no_classes": 1,
-        "no_labels": 8
+        "no_labels": 8,
+        "pos_weight": [
+            1.6589956998196698,
+            1.501829457931615,
+            11.922433625567368,
+            9.258320733796996,
+            9.805259492201515,
+            11.425273673041588,
+            9.047783991319589,
+            18.955828269907258
+        ]
     }
 }
