Add multilabel support for fine tuning + configs

--- a/config/training/linear_multilabel_classification_head_config.json
+++ b/config/training/linear_multilabel_classification_head_config.json
@@ -1,19 +1,17 @@
 {
-  "architecture_parameters":
-  {
+  "architecture_parameters": {
     "network_type": "linear",
     "output_dim": 8,
     "task": "multilabel_classification"
   },
-  "training_parameters":
-  {
-    "learning_rate": 0.00005,
+  "training_parameters": {
+    "learning_rate": 7.553707083479324e-05,
     "epochs": 200,
-    "batch_size": 1024,
+    "batch_size": 16,
     "loss_f": "masked_bce_logits",
     "optimizer": "adam",
     "val_split": 0.2,
-    "weight_decay": 0.01,
+    "weight_decay": 7.010143920483967e-06,
     "warmup_steps": 0,
     "gradient_clipping": false,
     "scheduler": false,
