--- a/config/training/mlp_multilabel_classification_head_config.json
+++ b/config/training/mlp_multilabel_classification_head_config.json
@@ -2,27 +2,27 @@
   "architecture_parameters": {
     "network_type": "mlp",
     "output_dim": 8,
-    "hidden_dim": 1920,
-    "hidden_layers": 2,
+    "hidden_dim": 2860,
+    "hidden_layers": 1,
     "task": "multilabel_classification",
     "hidden_activation": "relu",
-    "hidden_dropout": 0.059925049927049015
+    "hidden_dropout": 0.3347904114661068
   },
   "training_parameters": {
-    "learning_rate": 6.945946876809846e-05,
+    "learning_rate": 0.0006355345107541658,
     "epochs": 200,
-    "batch_size": 302,
+    "batch_size": 24,
     "loss_f": "masked_bce_logits",
     "optimizer": "adam",
     "val_split": 0.2,
-    "weight_decay": 6.523661693987702e-06,
+    "weight_decay": 3.1351992079813917e-06,
     "warmup_steps": 0,
     "gradient_clipping": false,
     "scheduler": false,
     "scaler": false,
     "gradient_accumulation": false,
     "epoch_sizing": 1.0,
-    "early_stopping": 10,
+    "early_stopping": 5,
     "no_classes": 1,
     "no_labels": 8
   }
