--- a/config/training/rnn_multilabel_classification_head_config.json
+++ b/config/training/rnn_multilabel_classification_head_config.json
@@ -1,28 +1,28 @@
 {
   "architecture_parameters": {
     "network_type": "rnn",
-    "hidden_dim": 128,
+    "hidden_dim": 291,
     "output_dim": 8,
     "task": "multilabel_classification",
-    "dropout": 0,
+    "dropout": 0.2672014449835355,
     "bidirectional": true,
     "num_layers": 2
   },
   "training_parameters": {
-    "learning_rate": 6.945946876809846e-05,
+    "learning_rate": 0.000667793303250398,
     "epochs": 200,
-    "batch_size": 302,
+    "batch_size": 54,
     "loss_f": "masked_bce_logits",
     "optimizer": "adam",
     "val_split": 0.2,
-    "weight_decay": 6.523661693987702e-06,
+    "weight_decay": 4.8568386776690114e-06,
     "warmup_steps": 0,
     "gradient_clipping": false,
     "scheduler": false,
     "scaler": false,
     "gradient_accumulation": false,
     "epoch_sizing": 1.0,
-    "early_stopping": 10,
+    "early_stopping": 5,
     "no_classes": 1,
     "no_labels": 8
   }
