--- a/config/training/transformer_multilabel_classification_config.json
+++ b/config/training/transformer_multilabel_classification_config.json
@@ -2,30 +2,30 @@
     "architecture_parameters": {
         "network_type": "transformer",
         "output_dim": 8,
-        "embd_dim": 64,
+        "embd_dim": 32,
         "task": "multilabel_classification",
-        "nheads": 32,
-        "d_hid": 256,
+        "nheads": 4,
+        "d_hid": 64,
         "nlayers": 2,
         "max_seq_len": 232,
-        "pwff_dim": 128,
-        "dropout": 0.1
+        "pwff_dim": 256,
+        "dropout": 0.18045029026217185
     },
     "training_parameters": {
-        "learning_rate": 0.0004722248137843737,
+        "learning_rate": 6.415656247166666e-05,
         "epochs": 200,
-        "batch_size": 92,
+        "batch_size": 24,
         "loss_f": "masked_bce_logits",
         "optimizer": "adam",
         "val_split": 0.2,
-        "weight_decay": 2.125324400687282e-05,
+        "weight_decay": 8.963571239687824e-06,
         "warmup_steps": 0,
         "gradient_clipping": false,
         "scheduler": false,
         "scaler": false,
         "gradient_accumulation": false,
         "epoch_sizing": 1.0,
-        "early_stopping": 10,
+        "early_stopping": 5,
         "no_classes": 1,
         "no_labels": 8
     }
