evaluation metrics updated for multilabel

--- a/config/training/linear_multilabel_classification_head_config.json
+++ b/config/training/linear_multilabel_classification_head_config.json
@@ -20,6 +20,7 @@
     "epoch_sizing": 1.0,
     "early_stopping": 10,
     "no_classes": 1,
-    "no_labels": 8
+    "no_labels": 8,
+    "extra_divisions": ["is_monotone", "is_mixed", "is_wanted", "is_literature"]
   }
 }
